# NVIDIA-Nemotron-Model-Reasoning-Challenge

./: .gitignore  AGENTS.md  BF16_SINGLEFILE_REPRO_SUMMARY_2026-03-27.md  DATA_ANALYSIS_REPORT.md  How to Get Started + Nemotron Model Reasoning Challenge Resources.md  README-Nemotron-3-Nano-30B-A3B-BF16.md  README.md  SYNTHETIC_DATA_AUGMENTATION_POLICY.md  brute_solve.py  debug_solver.py  direct_exec_materialize.py  do_materialize.py  download_bf16_mlx_model.py  exec_materialize.sh  get_diff.sh  get_git_diff.py  how-to-get-started-transformers.md  launch_reprobridge25_waiters.py  launch_reprobridge31_32_recovery.py  main.py  materialize_reprobridge.py  materialize_reprobridges.py  nvidia-nemotron-metric.ipynb  nvidia-nemotron-submission-demo.ipynb  pty_health_probe.py  pyproject.toml  report.20260413.091256.9260.0.001.json  run_materialize.sh  solve_row1.py  solve_rows.py  solve_three_rows.py  target_modules_fact_record_2026-04-08.md  temp_execute_runner.py  try-cuda-train-data-analyst-plan.md  try-cuda-train-result.md  try-cuda-train.md
A-Open-ProgressPrizePublication/: README.md  Training Nemotron-3-Nano-30B-A3B-BF16 with rank 32 LoRA on length 8192 sequences.md  adapter-validation-notebook.ipynb  kaggle-v20-sft-repro.ipynb  tinker-submission-notebook-v77-082.ipynb  tinker-submission-notebook.ipynb  v20_snapshot_final_summary_replacement_report.md  v20_to_088_strategy.md  データ戦略を理解する.md  学習SFTパイプライン.md
Nemotron-Cascade-2/: Nemotron-Cascade-2-kaggle-competition-notes.md  Nemotron-Cascade-2.md
appendix/: Self-Execution Simulation Improves Coding Models.md  (+3 more)
(+125456 files in other folders)
