[project]
name = "nvidia-nemotron-model-reasoning-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=1.7.2",
    "mlx-lm>=0.31.1",
    "pandas>=3.0.1",
    "peft>=0.18.1",
    "pyarrow>=23.0.1",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
]
