[project]
name = "nvidia-nemotron-model-reasoning-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=0.34.0,<1.0",
    "mlx-lm[train]==0.29.1",
    "pandas>=3.0.1",
    "peft>=0.18.1",
    "pyarrow>=23.0.1",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "transformers==4.57.3",
]
